--- a/our-services.html
+++ b/our-services.html
@@ -84,118 +84,31 @@
     <!-- End Navbar -->
 
 
-    <!-- Start Home Section -->
-    <section class="home-sec">
-        <div class="owl-carousel home-slider">
+    <div class="page-header">
+        <img src="./assets/imgs/slider1.jpg" class="section-bg" alt="">
 
-            <div class="home-item">
-                <img loading="lazy" src="./assets/imgs/slider1.jpg" alt="" class="home-img">
-                <div class='container'>
-                    <div class="content wow fadeInUp">
-                        <h1 class="title">القمر الأزرق البعيد</h1>
-                        <p class='desc'>
-                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
-                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف
-                            التى يولدها التطبيق.
-                            إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
-                        </p>
-                        <a href="about-us.html" class="main-btn white up">عرض المزيد</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="home-item">
-                <img loading="lazy" src="./assets/imgs/slider2.jpg" alt="" class="home-img">
-                <div class='container'>
-                    <div class="content wow fadeInUp">
-                        <h1 class="title">القمر الأزرق البعيد</h1>
-                        <p class='desc'>
-                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
-                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف
-                            التى يولدها التطبيق.
-                            إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
-                        </p>
-                        <a href="about-us.html" class="main-btn white up">عرض المزيد</a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="home-item">
-                <img loading="lazy" src="./assets/imgs/slider4.jpg" alt="" class="home-img">
-                <div class='container'>
-                    <div class="content wow fadeInUp">
-                        <h1 class="title">القمر الأزرق البعيد</h1>
-                        <p class='desc'>
-                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
-                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف
-                            التى يولدها التطبيق.
-                            إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
-                        </p>
-                        <a href="about-us.html" class="main-btn white up">عرض المزيد</a>
-                    </div>
-                </div>
-            </div>
-
-        </div>
-    </section>
-    <!-- End Home Section -->
-
-
-    <!-- Start principles Section -->
-    <section class="principles-section main-padding">
         <div class="container">
-
-            <h2 class="main-title bounceIn wow">المبادئ الأساسية</h2>
-
-            <div class="principles-cards grid-4">
-
-                <div class="principle-card wow fadeInUp">
-                    <h2 class="prin-name">الكفاءة المهنية</h2>
-                    <p class="prin-desc">
-                        إن تحقيق التوازن بين الخبرات المتألقة لأكثر من 25 عام والشباب الطموح داعم رئيسي لكفاءة مهنية
-                        عالية تقدم خدماتها بأعلى المعايير لبناء ثقة
-                    </p>
-                </div>
-
-                <div class="principle-card wow fadeInUp">
-                    <h2 class="prin-name">الإنجـــاز</h2>
-                    <p class="prin-desc">
-                        إن سرعة استجابة فريق العمل ناتج عن تخطيط منظم بتوقيت محدد يحقق إنجاز نفخر به ويسعد عملاءنا.
-                    </p>
-                </div>
-
-                <div class="principle-card wow fadeInUp">
-                    <h2 class="prin-name">الجودة</h2>
-                    <p class="prin-desc">
-                        تحقيق معايير الجودة القصوى طموح نسعى له ونعمل لأجله لذلك نضع الهدف ونرسم الخطة ونحدد معيار
-                        الأداء, ونتقبل الأراء الهادفة للتطوير.
-                    </p>
-                </div>
-
-                <div class="principle-card wow fadeInUp">
-                    <h2 class="prin-name">الجودة</h2>
-                    <p class="prin-desc">
-                        تحقيق معايير الجودة القصوى طموح نسعى له ونعمل لأجله لذلك نضع الهدف ونرسم الخطة ونحدد معيار
-                        الأداء, ونتقبل الأراء الهادفة للتطوير.
-                    </p>
-                </div>
-
+            <div class="page-info">
+                <h2 class="page-head">خدماتنا</h2>
+                <ul class="breadcrumb-con">
+                    <li class="breadcrumb-m"><a href="index.html">الرئيسية</a></li>
+                    <li class="breadcrumb-m">
+                        <i class="fa-solid fa-angles-left"></i>
+                    </li>
+                    <li class="breadcrumb-m">خدماتنا</li>
+                </ul>
             </div>
-
         </div>
-    </section>
-    <!-- End principles Section -->
+    </div>
 
 
     <!-- Start Services Section -->
     <section class="services-sec main-padding">
         <div class="container">
 
-            <h2 class="main-title bounceIn wow">خدماتنا</h2>
+            <div class="services-cards grid-4">
 
-            <div class="services-cards services-slider owl-carousel">
-
-                <div class="services-card">
+                <div class="services-card zoomIn wow">
 
                     <div class="img">
                         <img loading="lazy" src="./assets/imgs/slider1.jpg" alt="">
@@ -216,7 +129,7 @@
 
                 </div>
 
-                <div class="services-card">
+                <div class="services-card zoomIn wow">
 
                     <div class="img">
                         <img loading="lazy" src="./assets/imgs/slider3.jpeg" alt="">
@@ -237,7 +150,7 @@
 
                 </div>
 
-                <div class="services-card">
+                <div class="services-card zoomIn wow">
 
                     <div class="img">
                         <img loading="lazy" src="./assets/imgs/slider2.jpg" alt="">
@@ -258,7 +171,7 @@
 
                 </div>
 
-                <div class="services-card">
+                <div class="services-card zoomIn wow">
 
                     <div class="img">
                         <img loading="lazy" src="./assets/imgs/slider4.jpg" alt="">
@@ -279,7 +192,7 @@
 
                 </div>
 
-                <div class="services-card">
+                <div class="services-card zoomIn wow">
 
                     <div class="img">
                         <img loading="lazy" src="./assets/imgs/slider3.jpeg" alt="">
@@ -300,11 +213,52 @@
 
                 </div>
 
-                <div class="services-card">
+                <div class="services-card zoomIn wow">
 
                     <div class="img">
                         <img loading="lazy" src="./assets/imgs/slider2.jpg" alt="">
                         <img loading="lazy" src="./assets/imgs/slider2.jpg" class="services-img" alt="">
+                    </div>
+
+                    <div class="services-content">
+
+                        <h5 class="services-head">عنوان الخدمة</h5>
+                        <p class="services-desc">
+                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف
+                            التى يولدها التطبيق.
+                        </p>
+
+                        <a href="services-detailes.html" class="main-btn white up services_btn">عرض المزيد</a>
+                    </div>
+
+                </div>
+
+                <div class="services-card zoomIn wow">
+
+                    <div class="img">
+                        <img loading="lazy" src="./assets/imgs/slider4.jpg" alt="">
+                        <img loading="lazy" src="./assets/imgs/slider4.jpg" class="services-img" alt="">
+                    </div>
+
+                    <div class="services-content">
+                        <h5 class="services-head">عنوان الخدمة</h5>
+                        <p class="services-desc">
+                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
+                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف
+                            التى يولدها التطبيق.
+                        </p>
+
+                        <a href="services-detailes.html" class="main-btn white up services_btn">عرض المزيد</a>
+                    </div>
+
+                </div>
+
+                <div class="services-card zoomIn wow">
+
+                    <div class="img">
+                        <img loading="lazy" src="./assets/imgs/slider1.jpg" alt="">
+                        <img loading="lazy" src="./assets/imgs/slider1.jpg" class="services-img" alt="">
                     </div>
 
                     <div class="services-content">
@@ -326,176 +280,6 @@
         </div>
     </section>
     <!-- End Services Section -->
-
-
-    <!-- Start Our Team  -->
-    <section class="team-sec main-padding">
-        <div class="container">
-
-            <h2 class="main-title wow bounceIn ">فريق الشركة</h2>
-
-            <div class="team-cards services-slider owl-carousel">
-
-                <div class="team-card">
-                    <div class="top">
-                        <a href="./assets/imgs/profile1.jpg" class="fancybox-img avatar" data-fancybox="gallery">
-                            <img loading="lazy" src="./assets/imgs/profile1.jpg" alt="member img" />
-                        </a>
-                    </div>
-
-                    <h3 class="team-name">باسل سلمان</h3>
-                    <div class="desc ">
-                        - هذا النص
-                        هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
-                        هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
-                    </div>
-                </div>
-
-                <div class="team-card">
-                    <div class="top">
-                        <a href="./assets/imgs/profile2.jpg" class="fancybox-img avatar" data-fancybox="gallery">
-                            <img loading="lazy" src="./assets/imgs/profile2.jpg" alt="member img" />
-                        </a>
-                    </div>
-
-                    <h3 class="team-name">باسل سلمان</h3>
-                    <div class="desc ">
-                        - هذا النص
-                        هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
-                        هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
-                    </div>
-                </div>
-
-                <div class="team-card">
-                    <div class="top">
-                        <a href="./assets/imgs/profile3.jpg" class="fancybox-img avatar" data-fancybox="gallery">
-                            <img loading="lazy" src="./assets/imgs/profile3.jpg" alt="member img" />
-                        </a>
-                    </div>
-
-                    <h3 class="team-name">باسل سلمان</h3>
-                    <div class="desc ">
-                        - هذا النص
-                        هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
-                        هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
-                    </div>
-                </div>
-
-                <div class="team-card">
-                    <div class="top">
-                        <a href="./assets/imgs/profile4.jpg" class="fancybox-img avatar" data-fancybox="gallery">
-                            <img loading="lazy" src="./assets/imgs/profile4.jpg" alt="member img" />
-                        </a>
-                    </div>
-
-                    <h3 class="team-name">باسل سلمان</h3>
-                    <div class="desc ">
-                        - هذا النص
-                        هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
-                        هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
-                    </div>
-                </div>
-
-                <div class="team-card">
-                    <div class="top">
-                        <a href="./assets/imgs/profile5.jpg" class="fancybox-img avatar" data-fancybox="gallery">
-                            <img loading="lazy" src="./assets/imgs/profile5.jpg" alt="member img" />
-                        </a>
-                    </div>
-
-                    <h3 class="team-name">باسل سلمان</h3>
-                    <div class="desc ">
-                        - هذا النص
-                        هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
-                        هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك
-                    </div>
-                </div>
-
-            </div>
-
-        </div>
-    </section>
-    <!-- End Our Team  -->
-
-
-    <!-- Start Our Numbers -->
-    <section class="our-numbers main-padding" style="background-image: url('./assets/imgs/slider1.jpg')">
-        <div class="container">
-
-            <div class="number-items">
-
-                <div class="number-item">
-                    <div class="num">1500</div>
-                    <div class="text">عدد زيارات الموقع</div>
-                </div>
-
-                <div class="number-item">
-                    <div class="num">300</div>
-                    <div class="text">عدد العملاء</div>
-                </div>
-
-                <div class="number-item">
-                    <div class="num">700</div>
-                    <div class="text">عدد الخدمات</div>
-                </div>
-
-                <div class="number-item">
-                    <div class="num">1500</div>
-                    <div class="text">عدد زيارات الموقع</div>
-                </div>
-
-                <div class="number-item">
-                    <div class="num">300</div>
-                    <div class="text">عدد العملاء</div>
-                </div>
-
-            </div>
-
-        </div>
-    </section>
-    <!-- End Our Numbers -->
-
-
-    <!-- Start clients Section -->
-    <section class="client-section main-padding">
-        <div class="container">
-            <h2 class="main-title">شركاء النجاح</h2>
-
-            <div class="clients-slider owl-carousel">
-
-                <div class="client-item">
-                    <img loading="lazy" src="assets/imgs/client-1.png" alt="" class="brand-img">
-                </div>
-
-                <div class="client-item">
-                    <img loading="lazy" src="assets/imgs/client-2.png" alt="" class="brand-img">
-                </div>
-
-                <div class="client-item">
-                    <img loading="lazy" src="assets/imgs/client-3.png" alt="" class="brand-img">
-                </div>
-
-                <div class="client-item">
-                    <img loading="lazy" src="assets/imgs/client-4.png" alt="" class="brand-img">
-                </div>
-
-                <div class="client-item">
-                    <img loading="lazy" src="assets/imgs/client-5.png" alt="" class="brand-img">
-                </div>
-
-                <div class="client-item">
-                    <img loading="lazy" src="assets/imgs/client-6.png" alt="" class="brand-img">
-                </div>
-
-                <div class="client-item">
-                    <img loading="lazy" src="assets/imgs/client-7.png" alt="" class="brand-img">
-                </div>
-
-            </div>
-        </div>
-
-    </section>
-    <!-- End clients Section -->
 
 
     <!-- Start Footer -->
