--- a/gallary.html
+++ b/gallary.html
@@ -32,7 +32,7 @@
 
     <!-- start to loader -->
     <div class="loader">
-        <img loading="lazy" src="assets/imgs/logo.png" alt="">
+        <img src="assets/imgs/logo.png" alt="">
     </div>
 
 
@@ -85,7 +85,7 @@
 
 
     <div class="page-header">
-        <img src="./assets/imgs/slider1.jpg" class="section-bg" alt="">
+        <img loading="lazy" src="./assets/imgs/slider1.jpg" class="section-bg" alt="">
 
         <div class="container">
             <div class="page-info">
@@ -107,38 +107,38 @@
         <div class="container">
 
             <div class="gallary">
-                <a href="./assets/imgs/grid1.jpg" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid1.jpg" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid1.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid1.jpg" alt="" class="gallary-img">
                 </a>
-                <a href="./assets/imgs/grid2.png" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid2.png" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid2.png" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid2.png" alt="" class="gallary-img">
                 </a>
-                <a href="./assets/imgs/grid3.jpg" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid3.jpg" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid3.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid3.jpg" alt="" class="gallary-img">
                 </a>
-                <a href="./assets/imgs/grid4.jpg" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid4.jpg" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid4.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid4.jpg" alt="" class="gallary-img">
                 </a>
-                <a href="./assets/imgs/grid1.jpg" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid1.jpg" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid1.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid1.jpg" alt="" class="gallary-img">
                 </a>
-                <a href="./assets/imgs/grid1.jpg" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid1.jpg" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid1.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid1.jpg" alt="" class="gallary-img">
                 </a>
-                <a href="./assets/imgs/grid4.jpg" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid4.jpg" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid4.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid4.jpg" alt="" class="gallary-img">
                 </a>
-                <a href="./assets/imgs/grid1.jpg" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid1.jpg" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid1.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid1.jpg" alt="" class="gallary-img">
                 </a>
-                <a href="./assets/imgs/grid2.png" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid2.png" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid2.png" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid2.png" alt="" class="gallary-img">
                 </a>
-                <a href="./assets/imgs/grid3.jpg" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid3.jpg" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid3.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid3.jpg" alt="" class="gallary-img">
                 </a>
-                <a href="./assets/imgs/grid4.jpg" class="fancybox-img" data-fancybox="gallery">
-                    <img src="./assets/imgs/grid4.jpg" alt="" class="gallary-img">
+                <a href="./assets/imgs/grid4.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
+                    <img loading="lazy" src="./assets/imgs/grid4.jpg" alt="" class="gallary-img">
                 </a>
             </div>
 
