--- a/our-services.html
+++ b/our-services.html
@@ -32,7 +32,7 @@
 
     <!-- start to loader -->
     <div class="loader">
-        <img loading="lazy" src="assets/imgs/logo.png" alt="">
+        <img src="assets/imgs/logo.png" alt="">
     </div>
 
 
