--- a/contact-us.html
+++ b/contact-us.html
@@ -155,8 +155,7 @@
                             <div class="input-g">
                                 <div class="main-label">رسالتك او استفسارك</div>
                                 <div class="main-input">
-                                    <textarea placeholder="رسالتك او استفسارك"
-                                        class="input-me text-area"></textarea>
+                                    <textarea placeholder="رسالتك او استفسارك" class="input-me text-area"></textarea>
                                 </div>
                             </div>
                         </div>
@@ -181,8 +180,8 @@
     <!-- End Contact Form -->
 
 
-     <!-- Start Boxs Section -->
-     <section class="boxs-sec main-pb">
+    <!-- Start Boxs Section -->
+    <section class="boxs-sec main-pb">
         <div class="container">
 
             <div class="boxs-con grid-4">
@@ -309,6 +308,80 @@
 
 
     <div class="overlay-m"></div>
+
+    <!-- Get A Quote -->
+    <button type="button" class="get-quote up" data-bs-toggle="modal" data-bs-target="#quoteForm">طلب خدمة</button>
+
+    <div class="modal fade" id="quoteForm" tabindex="-1" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <form action="" class="w-100">
+
+                    <div class="modal-body">
+
+                        <h3 class="fs-18 c-black mb-4 text-center">طلب خدمة</h3>
+
+                        <div class="row gy-3 gx-3">
+
+                            <div class="col-12">
+                                <div class="main-input">
+                                    <div class="main-label">اختر الخدمة</div>
+                                    <select name="" id="" class="select">
+                                        <option value="" selected disabled>اختر الخدمة</option>
+                                        <option value="">اختر الخدمة</option>
+                                        <option value="">اختر الخدمة</option>
+                                        <option value="">اختر الخدمة</option>
+                                        <option value="">اختر الخدمة</option>
+                                    </select>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <div class="main-input">
+                                    <div class="main-label">الاسم الكامل</div>
+                                    <input type="text" placeholder="الاسم الكامل" class="input-me">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <div class="main-input">
+                                    <div class="main-label">البريد الالكترونى</div>
+                                    <input type="email" placeholder="البريد الالكترونى" class="input-me">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <div class="main-input">
+                                    <div class="main-label">رقم الهاتف</div>
+                                    <input type="phone" placeholder="رقم الهاتف" class="input-me">
+                                </div>
+                            </div>
+
+                            <div class="col-lg-6">
+                                <div class="main-input">
+                                    <div class="main-label">موضوع الرسالة</div>
+                                    <input type="text" placeholder="موضوع الرسالة" class="input-me">
+                                </div>
+                            </div>
+
+                            <div class="col-12">
+                                <div class="main-input">
+                                    <textarea class="input-me text-area" placeholder="رسالتك او استفسارك"></textarea>
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="main-btn up confirm-btn">تأكيد</button>
+                    </div>
+
+                </form>
+            </div>
+        </div>
+    </div>
 
 
 
