--- a/gallary.html
+++ b/gallary.html
@@ -32,7 +32,7 @@
 
     <!-- start to loader -->
     <div class="loader">
-        <img src="assets/imgs/logo.png" alt="">
+        <span class="loader_circle"></span>
     </div>
 
 
@@ -119,6 +119,7 @@
                 <a href="./assets/imgs/grid4.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
                     <img loading="lazy" src="./assets/imgs/grid4.jpg" alt="" class="gallary-img">
                 </a>
+                
                 <a href="./assets/imgs/grid1.jpg" class="fancybox-img wow bounceIn" data-fancybox="gallery">
                     <img loading="lazy" src="./assets/imgs/grid1.jpg" alt="" class="gallary-img">
                 </a>
