--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 
     <!-- start to loader -->
     <div class="loader">
-        <img src="assets/imgs/logo.png" alt="">
+        <span class="loader_circle"></span>
     </div>
+
 
 
     <!-- Start Navbar -->
