--- a/services-detailes.html
+++ b/services-detailes.html
@@ -32,7 +32,7 @@
 
     <!-- start to loader -->
     <div class="loader">
-        <img src="assets/imgs/logo.png" alt="">
+        <span class="loader_circle"></span>
     </div>
 
 
